--- a/src/styles.css
+++ b/src/styles.css
@@ -51,6 +51,7 @@ h1 {
   font-weight: 400;
   line-height: 0.8;
   margin: 0;
+  color : rgb(190, 171, 171);
 }
 
 h2 {
@@ -58,6 +59,7 @@ h2 {
   font-weight: 400;
   margin: 0;
   padding-top: 1rem;
+  color : rgb(190, 171, 171);
 }
 
 h3 {
