--- a/src/styles.css
+++ b/src/styles.css
@@ -12,6 +12,8 @@ body {
   overflow-x: hidden;
   padding: 0;
   width: 100%;
+  /* scroll smooth behaviour */
+  scroll-behavior: smooth;
 }
 
 div#main {
